<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="380dp"
        android:layout_height="134dp"
        android:autoText="false"
        android:gravity="center"
        android:text="TextView"
        android:textSize="36sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:fontFamily="monospace"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="1dp"
        tools:text="@string/binary_code" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331"
        app:srcCompat="@drawable/bomb_yellow" />

    <Button
        android:id="@+id/button_red2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/button_blue2" />

    <Button
        android:id="@+id/button_blue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_red2"
        app:layout_constraintEnd_toStartOf="@+id/button_red2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_green2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/green"
        app:layout_constraintStart_toEndOf="@+id/button_red2"
        app:layout_constraintTop_toTopOf="@+id/button_red2" />

    <Button
        android:id="@+id/button_brown2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/brown"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_green2"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>